import com.vanniktech.maven.publish.*

plugins {
    id 'java-library'
    id 'jacoco'
    id 'com.vanniktech.maven.publish' version '0.35.0' // publish to Maven Central
    id 'com.github.ben-manes.versions' version '0.53.0' // check for out-of-date dependencies (run 'dependencyUpdates' manually)
    id 'com.github.spotbugs' version '6.4.8' // spotbugs code analysis
    id 'org.sonarqube' version '7.2.1.6560' // sonarQube analysis
}

group = 'com.imsweb'
version = file('VERSION').text.trim()
description = 'Framework that allows defining file formats (layouts) and use them to read and write data files.'

println "Starting build using JDK ${Runtime.version().feature()}"

repositories {
    mavenCentral()

    maven {
        url = 'https://oss.sonatype.org/content/repositories/snapshots/'
    }
}

dependencies {
    api 'com.imsweb:naaccr-xml:12.1'

    implementation 'com.thoughtworks.xstream:xstream:1.4.21'
    implementation 'de.siegmar:fastcsv:4.1.0'
    implementation 'commons-io:commons-io:2.21.0'
    implementation 'org.apache.commons:commons-lang3:3.20.0'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'com.imsweb:seerutils:5.7'
    testImplementation 'com.imsweb:seerutils-gui:1.20'
    testImplementation 'com.imsweb:naaccr-api-client:1.3' // access NAACCR documentation API
    testImplementation 'org.commonmark:commonmark:0.27.0' // convert markdown to HTML for NAACCR documentation
    testImplementation 'org.freemarker:freemarker:2.3.34' // fill it template for NAACCR documentation
    testImplementation('org.xhtmlrenderer:core-renderer:R8') { // Java Swing HTML renderer for NAACCR documentation lab
        exclude module: 'itext'
    }
}
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
}

tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.addStringOption('encoding', 'UTF-8')
    options.addStringOption('charSet', 'UTF-8')
    options.addBooleanOption('html5', true)
}

jar {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Implementation-Vendor': 'Information Management Services Inc.',
                'Created-By': System.properties['java.vm.version'] + ' (' + System.properties['java.vm.vendor'] + ')',
                'Built-By': System.getProperty('user.name'),
                'Built-Date': new Date(),
                'Built-JDK': System.getProperty('java.version'),
                'Automatic-Module-Name': 'com.imsweb.layout'
        )
    }
}

// jacoco plugin settings
jacocoTestReport {
    reports {
        xml.required = true
    }
}
test.finalizedBy jacocoTestReport

// spotbugs plugin settings
spotbugs {
    ignoreFailures = true
    excludeFilter.set(project(':').file("config/spotbugs/spotbugs-exclude.xml"))
}

sonarqube {
    properties {
        property "sonar.projectKey", "imsweb_layout"
        property "sonar.organization", "imsweb"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.exclusions", "**/lab/**"
        property "sonar.coverage.exclusions", "**/lab/**"
    }
}

def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
    def regex = /^[0-9,.v-]+(-r)?$/
    return !stableKeyword && !(version ==~ regex)
}

// https://github.com/ben-manes/gradle-versions-plugin
tasks.named("dependencyUpdates").configure {
    rejectVersionIf {
        isNonStable(it.candidate.version)
    }
}

// needed to deploy to Maven Central Portal
mavenPublishing {
    configure(new JavaLibrary(new JavadocJar.Javadoc(), true))

    publishToMavenCentral(true)
    signAllPublications()

    pom {
        name = 'Layout Framework'
        description = 'Framework that allows defining file formats (layouts) and use them to read and write data files.'
        url = 'https://github.com/imsweb/layout'
        inceptionYear = '2015'

        licenses {
            license {
                name = 'A modified BSD License (BSD)'
                url = 'https://github.com/imsweb/layout/blob/master/LICENSE'
                distribution = 'repo'
            }
        }

        developers {
            developer {
                id = 'depryf'
                name = 'Fabian Depry'
                email = 'depryf@imsweb.com'
            }
        }

        scm {
            url = 'https://github.com/imsweb/layout'
            connection = 'scm:https://github.com/imsweb/layout.git'
            developerConnection = 'scm:git@github.com:imsweb/layout.git'
        }
    }
}

// Gradle wrapper, this allows to build the project without having to install Gradle!
wrapper {
    gradleVersion = '9.2.1'
    distributionType = Wrapper.DistributionType.ALL
}


